removed foundation for bootstrap

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 body {
     min-height: 100%;
-    background-color: black;
+    background-color: green;
 }
 
 * {
@@ -17,5 +17,22 @@ body {
 }
 
 .candidate-image {
-    background
+
 }
+
+
+/*****************************************
+				* Desktop
+*****************************************/
+
+
+/*****************************************
+				* Tablet
+*****************************************/
+
+
+
+/*****************************************
+				* Mobile
+*****************************************/
+
