--- a/app/css/style.css
+++ b/app/css/style.css
@@ -53,41 +53,55 @@ body {
   }
 }
 /* line 48, ../../sass/style.scss */
-.desktop-left-section .bills-sponsored-section {
+.desktop-left-section .bills-sponsored-section-mobile {
   background-color: yellow;
   height: 400px;
   width: 100%;
+  display: none;
 }
 @media only screen and (min-width: 1000px) {
   /* line 48, ../../sass/style.scss */
-  .desktop-left-section .bills-sponsored-section {
+  .desktop-left-section .bills-sponsored-section-mobile {
     float: left;
     width: 100%;
+    display: block;
   }
 }
 
-/* line 61, ../../sass/style.scss */
+/* line 63, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   background-color: pink;
   width: 100%;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 61, ../../sass/style.scss */
+  /* line 63, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 71, ../../sass/style.scss */
+/* line 73, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   height: 300px;
   background-color: lightblue;
   width: 100%;
 }
-/* line 77, ../../sass/style.scss */
+/* line 79, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   height: 300px;
   background-color: orchid;
   width: 100%;
+}
+/* line 85, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-desktop {
+  background-color: yellow;
+  height: 400px;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 85, ../../sass/style.scss */
+  .desktop-right-section .bills-sponsored-section-desktop {
+    display: none;
+  }
 }
