--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,14 +45,16 @@ body {
         }
     }
 
-    .bills-sponsored-section {
+    .bills-sponsored-section-mobile {
         background-color: yellow;
         height: 400px;
         width: 100%;
+        display: none;
 
         @media only screen and (min-width: 1000px) {
             float: left;
             width: 100%;
+            display: block;
         }
     }
 
@@ -78,5 +80,15 @@ body {
         height: 300px;
         background-color: orchid;
         width: 100%;
+    }
+
+    .bills-sponsored-section-desktop {
+        background-color: yellow;
+        height: 400px;
+        width: 100%;
+
+        @media only screen and (min-width: 1000px) {
+            display: none;
+        }
     }
 }
