--- a/app/css/style.css
+++ b/app/css/style.css
@@ -20,11 +20,19 @@ body {
 }
 
 /*****************************************
+			* Large Desktop
+*****************************************/
+/* Large desktop */
+/* Large desktop */
+/*****************************************
 				* Desktop
 *****************************************/
+/* Portrait tablet to landscape and desktop */
 /*****************************************
 				* Tablet
 *****************************************/
+/* Portrait tablet to landscape and desktop */
 /*****************************************
 				* Mobile
 *****************************************/
+/* Landscape phones and down */
