--- a/app/css/style.css
+++ b/app/css/style.css
@@ -40,7 +40,7 @@ h2 {
 /* line 32, ../../sass/style.scss */
 .navbar .navbar-brand {
   color: lightgray;
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 /* line 39, ../../sass/style.scss */
@@ -69,131 +69,156 @@ h2 {
   vertical-align: middle;
   display: inline-block;
   float: left;
-  font-size: 5em;
+  font-size: 4.5em;
+  padding-left: 10px;
 }
-/* line 63, ../../sass/style.scss */
+/* line 64, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 66, ../../sass/style.scss */
+/* line 67, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
-  font-size: 3em;
+  font-size: 2.5em;
 }
-/* line 72, ../../sass/style.scss */
+/* line 73, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 78, ../../sass/style.scss */
+/* line 79, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
-  font-size: 5em;
+  font-size: 4.5em;
+  padding-right: 10px;
 }
 
-/* line 85, ../../sass/style.scss */
+/* line 87, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
   line-height: 100px;
 }
-/* line 89, ../../sass/style.scss */
+/* line 91, ../../sass/style.scss */
+.bills-name-section .left-x {
+  vertical-align: middle;
+  display: inline-block;
+  float: left;
+  font-size: 4em;
+  padding-left: 10px;
+}
+/* line 99, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 92, ../../sass/style.scss */
+/* line 102, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
-  font-size: 3em;
+  font-size: 2.5em;
 }
-/* line 98, ../../sass/style.scss */
+/* line 108, ../../sass/style.scss */
 .bills-name-section .right-x {
+  display: inline-block;
   float: right;
   font-size: 4em;
+  padding-right: 10px;
 }
 
-/* line 104, ../../sass/style.scss */
+/* line 116, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 104, ../../sass/style.scss */
+  /* line 116, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 113, ../../sass/style.scss */
+/* line 125, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 118, ../../sass/style.scss */
+/* line 130, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 113, ../../sass/style.scss */
+  /* line 125, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 125, ../../sass/style.scss */
+  /* line 137, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
 }
-/* line 131, ../../sass/style.scss */
+/* line 143, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 131, ../../sass/style.scss */
+  /* line 143, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 140, ../../sass/style.scss */
+  /* line 152, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 144, ../../sass/style.scss */
+  /* line 156, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 151, ../../sass/style.scss */
+  /* line 163, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 157, ../../sass/style.scss */
+/* line 169, ../../sass/style.scss */
+.desktop-left-section .bill-description-desktop {
+  display: none;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 169, ../../sass/style.scss */
+  .desktop-left-section .bill-description-desktop {
+    float: left;
+    width: 80%;
+    display: block;
+  }
+}
+/* line 180, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 157, ../../sass/style.scss */
+  /* line 180, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 166, ../../sass/style.scss */
+  /* line 189, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 170, ../../sass/style.scss */
+  /* line 193, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list {
     background-color: lightgray;
   }
-  /* line 173, ../../sass/style.scss */
+  /* line 196, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list .bill-item {
     font-size: 1.5em;
     border-bottom: 1px solid white;
@@ -202,109 +227,207 @@ h2 {
   }
 }
 
-/* line 186, ../../sass/style.scss */
+/* line 209, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 186, ../../sass/style.scss */
+  /* line 209, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 195, ../../sass/style.scss */
+/* line 218, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
+/* line 224, ../../sass/style.scss */
+.desktop-right-section .campaign-contributions-section h1 {
+  padding-top: 20px;
+}
 @media only screen and (min-width: 1000px) {
-  /* line 195, ../../sass/style.scss */
+  /* line 218, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 204, ../../sass/style.scss */
+  /* line 231, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
+    padding-top: 0;
   }
 }
-/* line 209, ../../sass/style.scss */
+/* line 237, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
   background: url("http://placekitten.com/600/400");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 218, ../../sass/style.scss */
+/* line 246, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
+/* line 250, ../../sass/style.scss */
+.desktop-right-section .industry-influence-section h1 {
+  padding-top: 20px;
+}
 @media only screen and (min-width: 1000px) {
-  /* line 218, ../../sass/style.scss */
+  /* line 246, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
   }
+  /* line 257, ../../sass/style.scss */
+  .desktop-right-section .industry-influence-section h1 {
+    padding-top: 0;
+  }
 }
-/* line 226, ../../sass/style.scss */
+/* line 262, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph {
   background: url("http://placekitten.com/600/401");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 234, ../../sass/style.scss */
+/* line 270, ../../sass/style.scss */
+.desktop-right-section .bill-industry-influence-section {
+  text-align: center;
+  width: 100%;
+  background-color: lightgray;
+}
+/* line 275, ../../sass/style.scss */
+.desktop-right-section .bill-industry-influence-section h1 {
+  padding-top: 20px;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 270, ../../sass/style.scss */
+  .desktop-right-section .bill-industry-influence-section {
+    text-align: left;
+  }
+  /* line 282, ../../sass/style.scss */
+  .desktop-right-section .bill-industry-influence-section h1 {
+    background-color: white;
+    padding-top: 0;
+  }
+}
+/* line 288, ../../sass/style.scss */
+.desktop-right-section .bill-industry-influence-section .influence-graph {
+  background: url("http://placekitten.com/600/401");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 400px;
+}
+/* line 296, ../../sass/style.scss */
+.desktop-right-section .bill-industry-description {
+  background-color: darkgray;
+  padding: 30px;
+  display: none;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 296, ../../sass/style.scss */
+  .desktop-right-section .bill-industry-description {
+    display: block;
+  }
+}
+/* line 306, ../../sass/style.scss */
+.desktop-right-section .bill-description-mobile {
+  width: 100%;
+  padding: 30px;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 306, ../../sass/style.scss */
+  .desktop-right-section .bill-description-mobile {
+    display: none;
+  }
+}
+/* line 316, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
-  font-size: 1.5em;
 }
-/* line 239, ../../sass/style.scss */
+/* line 320, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
+  padding-top: 20px;
 }
-/* line 243, ../../sass/style.scss */
+/* line 325, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list {
   background-color: lightgray;
 }
-/* line 246, ../../sass/style.scss */
+/* line 328, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list .bill-item {
   border-bottom: 1px solid white;
   border-top: 1px solid white;
   margin-top: 0px;
 }
 @media only screen and (min-width: 1000px) {
-  /* line 234, ../../sass/style.scss */
+  /* line 316, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
+/* line 342, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile {
+  background-color: lightgray;
+  width: 100%;
+}
+/* line 346, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile h1 {
+  text-align: center;
+  padding-top: 20px;
+}
+/* line 351, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile .candidate-list {
+  background-color: lightgray;
+}
+/* line 354, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile .candidate-list .candidate-item {
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  margin-top: 0px;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 342, ../../sass/style.scss */
+  .desktop-right-section .candidate-list-section-mobile {
+    display: none;
+  }
+}
 
-/* line 261, ../../sass/style.scss */
+/* line 369, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
 }
-/* line 265, ../../sass/style.scss */
+/* line 373, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 271, ../../sass/style.scss */
+/* line 379, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
+/* line 384, ../../sass/style.scss */
+.footer h2 {
+  padding: 0 20px 0 20px;
+}
+/* line 388, ../../sass/style.scss */
+.footer p {
+  padding: 0 20px 20px 20px;
+}
 @media only screen and (min-width: 1000px) {
-  /* line 277, ../../sass/style.scss */
+  /* line 393, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
   }
-  /* line 281, ../../sass/style.scss */
+  /* line 397, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
