--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,60 +1,252 @@
-/*
-Syntax error: Invalid CSS after "    }": expected "}", was "<<<<<<< HEAD"
-        on line 121 of /Users/DaddyDerek/Desktop/Projects/civic-celerator/sass/style.scss
+/* line 2, ../../sass/style.scss */
+html,
+body {
+  min-height: 100%;
+  background-color: black;
+}
+@media only screen and (max-width: 1000px) {
+  /* line 2, ../../sass/style.scss */
+  html,
+  body {
+    margin: 0px !important;
+  }
+}
 
-Backtrace:
-/Users/DaddyDerek/Desktop/Projects/civic-celerator/sass/style.scss:121
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:1147:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:1085:in `expected'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:1080:in `tok!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:536:in `block'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:529:in `ruleset'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:553:in `block_child'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:546:in `block_contents'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:82:in `stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/scss/parser.rb:27:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/engine.rb:342:in `_to_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/engine.rb:315:in `_render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.2.19/lib/sass/engine.rb:262:in `render'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:139:in `block (2 levels) in compile'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:126:in `timed'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:138:in `block in compile'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/logger.rb:45:in `red'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:137:in `compile'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:118:in `compile_if_required'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:103:in `block (2 levels) in run'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:101:in `each'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:101:in `block in run'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:126:in `timed'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/compiler.rb:100:in `run'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/commands/watch_project.rb:147:in `recompile'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `call'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `run_callback'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:55:in `callback_action'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:35:in `update'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:39:in `block in modified'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `each'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `modified'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:18:in `refresh'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `each'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block in run'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `loop'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `run'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm/monitor.rb:26:in `run'
-/Library/Ruby/Gems/2.0.0/gems/fssm-0.2.10/lib/fssm.rb:70:in `monitor'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/commands/watch_project.rb:87:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/commands/base.rb:18:in `execute'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/commands/project_base.rb:19:in `execute'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/bin/compass:30:in `block in <top (required)>'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/bin/compass:44:in `call'
-/Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/bin/compass:44:in `<top (required)>'
-/usr/bin/compass:23:in `load'
-/usr/bin/compass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Invalid CSS after \"    }\": expected \"}\", was \"<<<<<<< HEAD\"\A         on line 121 of /Users/DaddyDerek/Desktop/Projects/civic-celerator/sass/style.scss"; }
+/* line 11, ../../sass/style.scss */
+* {
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 19, ../../sass/style.scss */
+.container {
+  width: 100%;
+  background-color: white;
+}
+@media only screen and (max-width: 1000px) {
+  /* line 19, ../../sass/style.scss */
+  .container {
+    padding: 0px !important;
+    margin: 0 0 20px 0 !important;
+    width: 100% !important;
+  }
+}
+
+/* line 29, ../../sass/style.scss */
+.candidate-section {
+  text-align: center;
+}
+
+/*****************************************
+            * Large Desktop
+*****************************************/
+/* line 36, ../../sass/style.scss */
+.desktop-left-section {
+  height: 100%;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 36, ../../sass/style.scss */
+  .desktop-left-section {
+    float: left;
+    width: 30%;
+  }
+}
+/* line 45, ../../sass/style.scss */
+.desktop-left-section .candidate-image {
+  margin: auto;
+  text-align: center;
+}
+/* line 49, ../../sass/style.scss */
+.desktop-left-section .candidate-image h1 {
+  display: none;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 45, ../../sass/style.scss */
+  .desktop-left-section .candidate-image {
+    text-align: left;
+  }
+  /* line 56, ../../sass/style.scss */
+  .desktop-left-section .candidate-image h1 {
+    display: block;
+  }
+}
+/* line 62, ../../sass/style.scss */
+.desktop-left-section .candidate-committees {
+  display: none;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 62, ../../sass/style.scss */
+  .desktop-left-section .candidate-committees {
+    float: left;
+    width: 80%;
+    display: block;
+  }
+  /* line 70, ../../sass/style.scss */
+  .desktop-left-section .candidate-committees h1 {
+    background-color: white;
+  }
+  /* line 74, ../../sass/style.scss */
+  .desktop-left-section .candidate-committees ul {
+    font-size: 1.5em;
+    background-color: lightgray;
+    line-height: 2em;
+  }
+  /* line 80, ../../sass/style.scss */
+  .desktop-left-section .candidate-committees li {
+    list-style-type: none;
+  }
+}
+/* line 86, ../../sass/style.scss */
+.desktop-left-section .bills-sponsored-section-desktop {
+  width: 100%;
+  display: none;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 86, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop {
+    float: left;
+    width: 80%;
+    display: block;
+  }
+  /* line 95, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop h1 {
+    background-color: white;
+  }
+  /* line 99, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop ul {
+    font-size: 1.5em;
+    background-color: lightgray;
+    line-height: 2em;
+  }
+  /* line 105, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop li {
+    list-style-type: none;
+  }
+}
+
+/* line 113, ../../sass/style.scss */
+.desktop-right-section {
+  height: 100%;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 113, ../../sass/style.scss */
+  .desktop-right-section {
+    display: inline-block;
+    width: 70%;
+  }
+}
+
+/* line 123, ../../sass/style.scss */
+.campaign-contributions-section {
+  height: 300px;
+  background-color: lightblue;
+  width: 100%;
+}
+
+/* line 129, ../../sass/style.scss */
+.industry-influence-section {
+  height: 300px;
+  background-color: orchid;
+  width: 100%;
+}
+
+/*****************************************
+                * Desktop
+*****************************************/
+/*****************************************
+                * Tablet
+*****************************************/
+/*****************************************
+                * Mobile
+*****************************************/
+/* line 147, ../../sass/style.scss */
+.bills-sponsored-section-desktop {
+  background-color: yellow;
+  height: 400px;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 147, ../../sass/style.scss */
+  .bills-sponsored-section-desktop {
+    display: none;
+  }
+}
+
+/* line 157, ../../sass/style.scss */
+.campaign-contributions-section {
+  text-align: center;
+  background-color: lightgray;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 157, ../../sass/style.scss */
+  .campaign-contributions-section {
+    text-align: left;
+  }
+  /* line 165, ../../sass/style.scss */
+  .campaign-contributions-section h1 {
+    background-color: white;
+  }
+}
+/* line 170, ../../sass/style.scss */
+.campaign-contributions-section .contributions-graph {
+  background: url("http://placekitten.com/600/400");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 400px;
+}
+
+/* line 179, ../../sass/style.scss */
+.industry-influence-section {
+  text-align: center;
+  width: 100%;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 179, ../../sass/style.scss */
+  .industry-influence-section {
+    text-align: left;
+  }
+}
+/* line 187, ../../sass/style.scss */
+.industry-influence-section .influence-graph {
+  background: url("http://placekitten.com/600/401");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 400px;
+}
+
+/* line 195, ../../sass/style.scss */
+.bills-sponsored-section-mobile {
+  background-color: lightgray;
+  width: 100%;
+}
+/* line 199, ../../sass/style.scss */
+.bills-sponsored-section-mobile h1 {
+  text-align: center;
+}
+@media only screen and (min-width: 1000px) {
+  /* line 195, ../../sass/style.scss */
+  .bills-sponsored-section-mobile {
+    display: none;
+  }
+}
+
+/* line 208, ../../sass/style.scss */
+.footer {
+  background-color: black;
+}
+/* line 211, ../../sass/style.scss */
+.footer ul {
+  text-align: center;
+  font-size: 2em;
+}
+/* line 216, ../../sass/style.scss */
+.footer li {
+  display: inline;
+  list-style-type: none;
+}
